Downloading file path changes and view quote flow design

--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -57,6 +57,7 @@
                 android:id="@+id/quote_brief_dialog_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -709,12 +710,12 @@
                     android:id="@+id/card_view1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/size_20dp"
-                    android:layout_marginTop="@dimen/size_10dp"
-                    android:layout_marginEnd="@dimen/size_20dp"
-                    android:layout_marginBottom="@dimen/size_20dp"
-                    app:cardCornerRadius="@dimen/size_12dp"
-                    app:cardElevation="@dimen/size_10dp"
+                    android:layout_marginStart="@dimen/_18sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_18sdp"
+                    android:layout_marginBottom="@dimen/_18sdp"
+                    app:cardCornerRadius="@dimen/_10sdp"
+                    app:cardElevation="@dimen/_8sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -725,10 +726,10 @@
                         android:id="@+id/constraint2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/size_20dp"
-                        android:layout_marginTop="@dimen/size_15dp"
-                        android:layout_marginRight="@dimen/size_15dp"
-                        android:layout_marginBottom="@dimen/size_15dp"
+                        android:layout_marginStart="@dimen/_18sdp"
+                        android:layout_marginTop="@dimen/_13sdp"
+                        android:layout_marginEnd="@dimen/_13sdp"
+                        android:layout_marginBottom="@dimen/_13sdp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/radiogroup">
 
@@ -736,12 +737,12 @@
                             android:id="@+id/tx_job_title_vo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
+                            android:layout_marginTop="@dimen/_3sdp"
+                            android:layout_marginBottom="@dimen/_3sdp"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/saras_birthday"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -753,11 +754,11 @@
                             android:id="@+id/tx_job_idnum_vo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_5dp"
+                            android:layout_marginTop="@dimen/_3sdp"
                             android:fontFamily="@font/poppins_regular"
                             android:text="@string/ca457845264162"
                             android:textColor="@color/blue_event_id"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -770,10 +771,10 @@
                             android:id="@id/service_name_vo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_15dp"
+                            android:layout_marginTop="@dimen/_13sdp"
                             android:fontFamily="@font/mulish_semi_bold"
                             android:text="@string/fork_amp_spoon"
-                            android:textSize="@dimen/size_16sp"
+                            android:textSize="@dimen/_13sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/tx_job_idnum_vo"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -785,11 +786,11 @@
                             android:id="@+id/branch_name_vo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_2dp"
+                            android:layout_marginTop="@dimen/_2sdp"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/fork_amp_spoon"
                             android:textColor="@color/dark_font"
-                            android:textSize="@dimen/size_16sp"
+                            android:textSize="@dimen/_12sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/service_name_vo"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -803,7 +804,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_medium"
                             android:text="@string/bidding_"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -816,10 +817,10 @@
                             android:id="@+id/cost_estimation_"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_5dp"
+                            android:layout_marginTop="@dimen/_3sdp"
                             android:fontFamily="@font/mulish_medium"
                             android:text="@string/cost_estimation"
-                            android:textSize="@dimen/size_16sp"
+                            android:textSize="@dimen/_12sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -833,7 +834,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/mulish_medium"
                             android:text="@string/post_any_discount"
-                            android:textSize="@dimen/size_16sp"
+                            android:textSize="@dimen/_12sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -843,14 +844,14 @@
 
                         <TextView
                             android:id="@+id/cost_estimation_amount"
-                            android:layout_width="@dimen/size_140dp"
-                            android:layout_height="@dimen/size_45dp"
+                            android:layout_width="@dimen/_120sdp"
+                            android:layout_height="@dimen/_35sdp"
                             android:background="@drawable/shape_dailog_curved"
                             android:gravity="start|center"
                             android:hint="@string/amount"
                             android:inputType="number"
-                            android:paddingStart="@dimen/size_8dp"
-                            android:textSize="@dimen/size_20sp"
+                            android:paddingStart="@dimen/_6sdp"
+                            android:textSize="@dimen/_15sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -864,7 +865,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/quote_details__"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -876,7 +877,7 @@
                             android:id="@+id/file_img"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_10dp"
+                            android:layout_marginTop="@dimen/_8sdp"
                             android:src="@drawable/doc"
                             android:visibility="gone"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -890,10 +891,10 @@
                             android:id="@+id/filename_tx"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_10dp"
+                            android:layout_marginTop="@dimen/_8sdp"
                             android:text="@string/quotesite_pdf"
                             android:textColor="@color/calendar_border_darl_gray"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             android:visibility="gone"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -906,9 +907,9 @@
                             android:id="@+id/file_img_delete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/size_8dp"
-                            android:layout_marginTop="@dimen/size_10dp"
-                            android:src="@drawable/trash"
+                            android:layout_marginStart="@dimen/_6sdp"
+                            android:layout_marginTop="@dimen/_8sdp"
+                            android:src="@drawable/download"
                             android:visibility="gone"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -921,10 +922,10 @@
                             android:id="@+id/tx_comments"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/size_10dp"
+                            android:layout_marginTop="@dimen/_8sdp"
                             android:fontFamily="@font/mulish_bold"
                             android:text="@string/comments"
-                            android:textSize="@dimen/size_18sp"
+                            android:textSize="@dimen/_14sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.0"
@@ -936,24 +937,21 @@
                             android:id="@+id/et_comments"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="@dimen/size_10dp"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_marginRight="@dimen/_8sdp"
+                            android:layout_marginStart="@dimen/_2sdp"
                             android:fontFamily="@font/mulish_medium"
                             android:gravity="start"
                             android:lines="6"
                             android:maxLength="200"
-                            android:paddingStart="@dimen/size_15dp"
                             android:text="@string/no_comments_available"
                             android:textSize="@dimen/size_16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/tx_comments" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
                 </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
