--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -301,10 +301,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_10sdp"
+                    android:paddingStart="@dimen/_3sdp"
                     android:background="@drawable/box_login_text"
                     android:gravity="start"
                     android:lines="6"
                     android:maxLength="200"
+                    android:fontFamily="@font/mulish_regular"
+                    android:textSize="@dimen/_12sdp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tx_comments" />
