--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -51,6 +51,17 @@
                     android:text="@string/catering_fork_spoon"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_16sdp" />
+                <TextView
+                    android:id="@+id/tx_catering_viewq"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="@dimen/_25sdp"
+                    android:fontFamily="@font/mulish_semi_bold"
+                    android:text="@string/catering_fork_spoon"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_16sdp" />
             </RelativeLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -860,6 +871,7 @@
                             app:layout_constraintVertical_bias="0.04000002" />
 
                         <TextView
+                            android:visibility="gone"
                             android:id="@+id/tx_quote_details"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
