--- a/app/src/main/res/drawable-ldpi/corner_radius_background_modify_slots_gray.xml
+++ b/app/src/main/res/drawable-ldpi/corner_radius_background_modify_slots_gray.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/day_blue"/>
+            <solid android:color="@color/background_gray"/>
             <corners android:radius="@dimen/size_10dp"/>
         </shape>
     </item>
