--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/mulish_bold"
                 android:text="@string/catering"
+                android:layout_marginStart="@dimen/_2sdp"
                 android:textSize="@dimen/_16sdp"
                 app:layout_constraintBottom_toBottomOf="@+id/quote_title"
                 app:layout_constraintStart_toEndOf="@+id/quote_title"
