--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -27,25 +27,28 @@
 
             <TextView
                 android:id="@+id/quote_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/mulish_bold"
                 android:text="@string/quote_details_for"
                 android:textSize="@dimen/_16sdp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/quote_title_service_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/mulish_bold"
-                android:text="@string/catering"
-                android:layout_marginStart="@dimen/_2sdp"
-                android:textSize="@dimen/_16sdp"
-                app:layout_constraintBottom_toBottomOf="@+id/quote_title"
-                app:layout_constraintStart_toEndOf="@+id/quote_title"
-                app:layout_constraintTop_toTopOf="@+id/quote_title" />
+<!--            <TextView-->
+<!--                android:id="@+id/quote_title_service_name"-->
+<!--                android:layout_width="@dimen/_80sdp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="@dimen/_2sdp"-->
+<!--                android:fontFamily="@font/mulish_bold"-->
+<!--                android:text="fnbhsjiadjshbdkfkojdbhsnfkodjbh"-->
+<!--                android:textSize="@dimen/_16sdp"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/quote_title"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/quote_title"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/quote_title" />-->
 
             <RadioGroup
                 android:id="@+id/radiogroup"
